<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_equalizer"
        android:icon="@drawable/equalizer"
        android:iconTint="?android:attr/actionMenuTextColor"
        android:showAsAction="always"
        android:title="@string/menu_title_equalizer"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/action_reload"
        android:icon="@drawable/sync"
        android:iconTint="?android:attr/actionMenuTextColor"
        android:showAsAction="ifRoom"
        android:title="@string/menu_title_reload" />
    <item
        android:id="@+id/action_save_playlist"
        android:icon="@drawable/save_as"
        android:iconTint="?android:attr/actionMenuTextColor"
        android:showAsAction="ifRoom"
        android:title="@string/content_description_save" />
    <item
        android:id="@+id/action_queue"
        android:icon="@drawable/queue_music"
        android:iconTint="?android:attr/actionMenuTextColor"
        android:showAsAction="always"
        android:title="@string/menu_title_queue" />
    <item
        android:id="@+id/action_player"
        android:icon="@drawable/player"
        android:iconTint="?android:attr/actionMenuTextColor"
        android:showAsAction="always"
        android:title="@string/menu_title_player" />
</menu>